[metadata]
name = onipkg_contrib
version = 1.3
description = Contrib pkg para projetos da Onimusic
long_description = file: README.rst
url = https://www.example.com/
author = Daniel e Isaque
author_email = daniel.santana@onimusic.com.br
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    requests >= 2
    discord == 2.2.2
